Make sure lab section looks good in dark mode

--- a/src/components/lab/rock-paper-scissor-game.css
+++ b/src/components/lab/rock-paper-scissor-game.css
@@ -1,3 +1,12 @@
+body {
+    --gameOverlayBackgroundColor: var(--white);
+}
+
+body.dark {
+    --gameOverlayBackgroundColor: var(--midnight);
+    --gameOverlayBorderColor: var(--grey);
+}
+
 .game-wrapper {
     position: relative;
 }
@@ -24,10 +33,14 @@
 
 .overlay-message {
     width: 300px;
-    background: white;
+    background: var(--gameOverlayBackgroundColor);
     text-align: center;
     box-shadow: 0 2px 12px 0 rgb(0 0 0 / 10%);
     padding: 2rem;
+}
+
+body.dark .overlay-message {
+    border: 1px solid var(--gameOverlayBorderColor);
 }
 
 .game-item {
